- MP3packer 2.04 - http://omion.dyndns.org/mp3packer/mp3packer.html
- mp4v2 2.0.0 r504 - https://code.google.com/p/mp4v2/
- OptiPNG Hg 20121021 - http://optipng.sourceforge.net
- PCXLite 1.0 - http://sol.gfxile.net/code.html
- PngOptimizer 2.4.1 - http://psydk.org/PngOptimizer
- PETrim 4.00 beta - http://pecompact.com/pesuite.php
- PNGOUT 02/13/2015 - http://advsys.net/ken/utils.htm
- pngrewrite 1.4.0 - http://entropymine.com/jason/pngrewrite
- pngwolf - http://bjoern.hoehrmann.de/pngwolf
- rehuff - http://wiki.xiph.org/Rehuff
- tidy-html5 c63cc39 - http://www.paehl.com/open_source/?HTML_Tidy_for_HTML5
- TruePNG 0.5.0.4 - http://x128.ho.ua/pngutils.html
- ZLib 1.2.8 - http://www.zlib.net
- zRecompress 2.12 - http://nikkhokkho.sourceforge.net/static.php?page=zRecompress


XX - YYYY
- Added MNG files detection by content.
- Added WinRAR SFX detection to exclude processing like we did with Inno Setup (SvenBent).
- Fixed regression on files with uppercase extensions, compression ratio was less than in 7.40 and before. (Jaff).
- Make child windows open on top, when always on top is checked (hairycactus).
- Do not reset column widths after minimizing window (Jaff).
- Use TMP if TEMP is not available or else use current directory to avoid issues when reading them (xezz).
- File extensions were converted to lowercase. ie: JPG to jpg (Marilyn Phillip).
- Updated jpegoptim to 1.4.3 beta (custom built).
- Updated to cppcheck 1.69.
- Some minor optimizations and code cleanup.


7.60 - 2015/04/26
- Added INI option AlwaysOnTop=false to specify if FileOptimizer main Windows should stay always on top (hairycactus).
- Updated Leanify 0.4.2.44 daily binaries.
- Adding files not working for the x64 edition due to some aggressive optimizations in C++ Builder with -O3 (hairycactus).

7.50 - 2015/04/24
- Add support for files larger than 4 GB, now up to 4 TB (Spotted Cow).
- Speedup file copies by using CopyFileEx.
- Updated help file.